Changed links in the file
Points to Github, not Google Drive anymore

--- a/Paper/finalPaper.tex
+++ b/Paper/finalPaper.tex
@@ -636,8 +636,7 @@ An initial idea was to incorporate machine learning into the thesis  could not b
 \onecolumn
 \subsection{Region Analysis Data}
 \label{seg:regionAnalysisData}
-	\par Figure \ref{tab:subTableRegion} shows a subset of the data collected for regions. The subset of data is for doing tpython
-	math.he algorithms over all the data without separation such as by weeks, months, or years. To see the full set of data for regions, refer to \href{https://docs.google.com/spreadsheets/d/1b-WJprSmBTCyujyXoT3wGxsx47cX5VVjYYHxUR9UrnU/edit?usp=sharing}{Google Drive Storage with all the data} separated by running the algorithm over weeks, months, or years.
+	\par Figure \ref{tab:subTableRegion} shows a subset of the data collected for regions. The subset of data is for doing the algorithms over all the data without separation such as by weeks, months, or years. To see the full set of data for regions, refer to \href{https://github.com/gateslm/CSSE-Senior-Thesis/blob/master/Results/finalResultRegion.xlsx}{Github repository with all the data} separated by running the algorithm over weeks, months, or years.
 
 \par NOTE: The values that have Ignore and negative numbers are place holders to denote where it was not relevant enough to place an advertisement. The different negative numbers are in place for debugging in case all output is a negative number for  a given region.
 
@@ -652,7 +651,7 @@ An initial idea was to incorporate machine learning into the thesis  could not b
 
 \subsection{Segment Analysis Data}
 \label{seg:segmentAnalysisData}
-\par Figure \ref{tab:tableSegmentSub} shows a subset of the data collected for segments. The subset of data is for doing the algorithms over all the data without separation such as by weeks, months, or years. To see the full set of data for segments, refer to \href{https://drive.google.com/open?id=1KnAJ8UV93-lr22eLf4HYYnbGWTztoq32c8p617_udOw}{Google Drive Storage with all the data} separated by running the algorithm over weeks, months, or years.
+\par Figure \ref{tab:tableSegmentSub} shows a subset of the data collected for segments. The subset of data is for doing the algorithms over all the data without separation such as by weeks, months, or years. To see the full set of data for segments, refer to \href{https://github.com/gateslm/CSSE-Senior-Thesis/blob/master/Results/finalResultSegment.xlsx}{Github with all the data} separated by running the algorithm over weeks, months, or years.
 
 
 \par NOTE: The values that have Ignore and negative numbers are place holders to denote where it was not relevant enough to place an advertisement. The different negative numbers are in place for debugging in case all output is a negative number for  a given segment.
