Added final paper to repository
Updated and completed paper

--- a/Paper/bib.bib
+++ b/Paper/bib.bib
@@ -186,3 +186,20 @@
 	journal={Chicago Data Portal}, 
 	publisher={City of Chicago}
 }
+
+
+@misc{github,
+	author = {Lawrence Gates},
+	title = {CSSE-Senior-Thesis},
+	year = {2017},
+	publisher = {GitHub},
+	journal = {GitHub repository},
+	howpublished = {\url{https://github.com/gateslm/CSSE-Senior-Thesis}}
+}
+
+@misc{dataPortal, 
+	title={City of Chicago - Data Portal}, 
+	howpublished = {\url{https://data.cityofchicago.org/}}, 
+	journal={Chicago Data Portal}, 
+	publisher={City of Chicago}
+}
